Updated text field

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="ico" href="/anya_nnR_icon.ico" />
+    <link rel="icon" type="ico" href="/anya.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nicholas Brezinski</title>
     <meta name="description" content="Nicholas Brezinski - Software Engineer & Computer Science Student specializing in full-stack development, AI/ML, and cross-platform applications." />
